--- a/Registro/app/src/main/res/values/strings.xml
+++ b/Registro/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="strPeso">Peso</string>
     <string name="strEstatura">Estatura</string>
     <string name="strPassword">Contraseña</string>
+    <string name="stPersonal">Informacion de Contacto</string>
+    <string name="strFirma">Tu firma aquí</string>
     <string name="strPadecimiento">¿Sufre padecimiento cronico?</string>
 
     <string name="siguiente">Siguiente</string>
