--- a/Registro/app/src/main/res/values/strings.xml
+++ b/Registro/app/src/main/res/values/strings.xml
@@ -11,7 +11,9 @@
     <string name="stPersonal">Informacion de Contacto</string>
     <string name="strFirma">Tu firma aquí</string>
     <string name="strCode">Codigo para comprar</string>
+    <string name="errEspecialidad">Elige tu padecimiento</string>
     <string name="strPadecimiento">¿Sufre padecimiento cronico?</string>
+    <string name="strDescribe">Describe tu padecimiento</string>
 
     <string name="siguiente">Siguiente</string>
     <string name="aceptar">Aceptar</string>
