--- a/Registro/app/src/main/res/values/strings.xml
+++ b/Registro/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Registro</string>
+    <string name="app_name"></string>
     <string name="strNombre">Nombre </string>
     <string name="strApellidos">Apellidos</string>
     <string name="strCorreo">Correo electronico</string>
@@ -21,7 +21,7 @@
 
     <string name="siguiente">Siguiente</string>
     <string name="aceptar">Aceptar</string>
-    <string name="action_settings"></string>
+    <string name="action_settings">Codigo de pago</string>
 
 
 </resources>
