--- a/Registro/app/src/main/res/values/strings.xml
+++ b/Registro/app/src/main/res/values/strings.xml
@@ -8,15 +8,15 @@
     <string name="strPeso">Peso</string>
     <string name="strEstatura">Estatura</string>
     <string name="strPassword">Contraseña</string>
-    <string name="stPersonal">Informacion de Contacto</string>
-    <string name="stBiomedica">Informacion de Biomedica</string>
-    <string name="stPadecimiento">Informacion de Padecimiento</string>
+    <string name="stPersonal">Información de Contacto</string>
+    <string name="stBiomedica">información Médica</string>
+    <string name="stPadecimiento">Información Médica</string>
     <string name="stFirma"></string>
     <string name="stTerminar">Listo!</string>
     <string name="strFirma">Tu firma aquí</string>
-    <string name="strCode">Codigo para comprar</string>
+    <string name="strCode">Código para comprar</string>
     <string name="errEspecialidad">Elige tu padecimiento</string>
-    <string name="strPadecimiento">¿Sufre padecimiento cronico?</string>
+    <string name="strPadecimiento">¿Sufre algun padecimiento cronico?</string>
     <string name="strDescribe">Describe tu padecimiento</string>
 
     <string name="siguiente">Siguiente</string>
