--- a/Registro/app/src/main/res/values/strings.xml
+++ b/Registro/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="strEstatura">Estatura</string>
     <string name="strPassword">Contraseña</string>
     <string name="stPersonal">Información de Contacto</string>
-    <string name="stBiomedica">información Médica</string>
+    <string name="stBiomedica">Información Médica</string>
     <string name="stPadecimiento">Información Médica</string>
     <string name="stFirma"></string>
     <string name="stTerminar">Listo!</string>
