--- a/Registro/app/src/main/res/values/strings.xml
+++ b/Registro/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="strColonia">Colonia</string>
     <string name="strMunicipio">Alcaldía  ó Municipio</string>
     <string name="strEstado">Estado</string>
+    <string name="strComentario">Tu cometario aquí</string>
 
 
     <string name="strIdentidad">Documentos</string>
