--- a/Registro/app/src/main/res/values/strings.xml
+++ b/Registro/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="strApellidos">Apellidos</string>
     <string name="strCorreo">Correo electronico</string>
     <string name="strCelular">Celular</string>
-    <string name="strFechaNacimiento">Fecha nacimiento</string>
+    <string name="strFechaNacimiento">Fecha de nacimiento</string>
     <string name="strPeso">Peso</string>
     <string name="strEstatura">Estatura</string>
     <string name="strPassword">Contraseña</string>
